[package]
name = "RMesureTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# RMesure = { git = "https://github.com/Gosharad1980/RMesure.git" }
RMesure = { git = "https://github.com/Gosharad1980/RMesure.git", features = ["MagicEverywhere"] }

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = 0
codegen-units = 1
debug = true

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1
debug = false